<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/matrimony_action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_matimonial_filter_search"
        android:icon="@drawable/searchfilter"

        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search" />

    <group >
        <item
            android:id="@+id/menu_matimonial_registration"

            android:title="@string/registration" />
        <item
            android:id="@+id/menu_matrimonial_myfavorites"

            android:title="@string/myfavorites" />
        <item
            android:id="@+id/menu_matrimonial_editprofile"

            android:title="@string/editprofile" />
        <item
            android:id="@+id/menu_matrimonial_interestedprofile"

            android:title="@string/interestedprofile" />
        <item
            android:id="@+id/menu_matrimonial_profilerequest"

            android:title="@string/profilerequest" />

        <item
            android:id="@+id/menu_matrimonial_buypackage"

            android:title="@string/buypackage" />
        <item
            android:id="@+id/menu_matrimonial_mypackage"

            android:title="@string/mypackages" />


    </group>


</menu>
