<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.avadharwebworld.avadhar.Activity.RealestateRegistration">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
        <TextView
            android:text="@string/property"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_realestate_registratiom_property"
            android:spinnerMode="dialog"
            android:layout_margin="2dp"
            android:entries="@array/property"
            android:layout_weight="0.08" />
        <TextView
            android:text="@string/typeofproperty"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_realestate_registratiom_typeofproperty"
            android:spinnerMode="dialog"
            android:layout_margin="2dp"
            android:layout_weight="0.08" />
        <TextView
            android:text="@string/country"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_realestate_registratiom_country"
            android:spinnerMode="dialog"
            android:layout_margin="2dp"

            android:layout_weight="0.08" />
        <TextView
            android:text="@string/state"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_realestate_registratiom_state"
            android:spinnerMode="dialog"
            android:layout_margin="2dp"

            android:layout_weight="0.08" />
        <TextView
            android:text="@string/city"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_realestate_registratiom_city"
            android:spinnerMode="dialog"
            android:layout_margin="2dp"

            android:layout_weight="0.08" />
        <TextView
            android:text="@string/typeofactivity"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_realestate_registratiom_typeofactivity"
            android:spinnerMode="dialog"
            android:layout_margin="2dp"
            android:entries="@array/typeofactivity"
            android:layout_weight="0.08" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:id="@+id/et_realestate_registratiom_price"
            app:met_floatingLabel="normal" />
        <TextView
            android:text="@string/furnished"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_realestate_registratiom_furnished"
            android:spinnerMode="dialog"
            android:layout_margin="2dp"
            android:entries="@array/furnished"
            android:layout_weight="0.08" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_realestate_registratiom_totalarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/totalarea"
            android:inputType="text"
            app:met_floatingLabel="normal" />

        <TextView
            android:text="@string/typeofuser"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_realestate_registratiom_typeofuser"
            android:spinnerMode="dialog"
            android:layout_margin="2dp"
            android:entries="@array/typeofuser"
            android:layout_weight="0.08" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/propertydetails"
            android:inputType="textPostalAddress"
            android:minLines="3"
            android:maxLines="5"
            android:id="@+id/et_realestate_registratiom_propertydescription"
            app:met_floatingLabel="normal" />

        <TextView
            android:text="@string/brocker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg_realestate_registratiom_brocker"
            android:layout_weight="0.02">

            <RadioButton
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_realestate_registratiom_yes"
                android:layout_weight="1" />
            <RadioButton
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_realestate_registratiom_no"
                android:layout_weight="1" />


        </RadioGroup>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tokenamount"
            android:id="@+id/et_realestate_registratiom_tokenamount"
            app:met_floatingLabel="normal" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/landarea"
            android:inputType="textPostalAddress"
            android:minLines="2"
            android:maxLines="4"
            android:id="@+id/et_realestate_registratiom_landarea"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buildarea"
            android:id="@+id/et_realestate_registratiom_buildarea"
            app:met_floatingLabel="normal" />

        <TextView
            android:text="@string/transactiontype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg_realestate_registratiom_transaction"
            android:layout_weight="0.02">

            <RadioButton
                android:text="@string/new1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_realestate_registratiom_new"
                android:layout_weight="1" />
            <RadioButton
                android:text="@string/resale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_realestate_registratiom_resale"
                android:layout_weight="1" />


        </RadioGroup>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ageofproperty"
            android:id="@+id/et_realestate_registratiom_ageofproperty"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/avaliablefromproperty"
            android:inputType="text"
            android:id="@+id/et_realestate_registratiom_availabletime"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:id="@+id/et_realestate_registratiom_titile"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ownername"
            android:inputType="text"
            android:id="@+id/et_realestate_registratiom_ownername"
            app:met_floatingLabel="normal" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactmobile"
            android:inputType="numberDecimal"
            android:id="@+id/et_realestate_registratiom_mobile"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/et_realestate_registratiom_email"
            app:met_floatingLabel="normal" />



        <Button
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_realestate_registration_save"
            android:layout_weight="0.08" />

    </LinearLayout>

</ScrollView>

</RelativeLayout>

