<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="Search Friends"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <group >
        <item
            android:id="@+id/menu_follower_profile"

            android:title="@string/profile" />
        <item
            android:id="@+id/menu_follower_follower"

            android:title="@string/followers" />
        <item
            android:id="@+id/menu_follower_settings"

            android:title="@string/action_settings" />

    </group>


</menu>
