<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/popupborder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"


        android:id="@+id/et_educationsearch_coursename"
        android:hint="@string/coursenamesearch"
        app:met_floatingLabel="normal" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"


        android:id="@+id/et_educationsearch_eligibility"
        android:hint="@string/eligibilitysearch"
        app:met_floatingLabel="normal" />

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_educationsearch_country"
        android:spinnerMode="dialog"
        android:layout_margin="2dp"

        android:layout_weight="0.08" />
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"

        android:id="@+id/sp_educationsearch_state"
        android:spinnerMode="dialog"

        android:layout_weight="0.08" />
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_educationsearch_city"
        android:spinnerMode="dialog"
        android:layout_margin="2dp"

        android:layout_weight="0.08" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"


        android:id="@+id/et_educationsearch_institutionName"
        android:hint="@string/institutionnamesearch"
        app:met_floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"


        android:id="@+id/et_educationsearch_affiliationMode"
        android:hint="@string/affiliationmodesearch"
        app:met_floatingLabel="normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"


        android:id="@+id/et_educationsearch_affiliationTo"
        android:hint="@string/affiliatedtosearch"
        app:met_floatingLabel="normal" />

    <Button
        android:text="@string/searchfilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_educationsearch_search" />
</LinearLayout>